Fix exception handling partially (#34)
Issue #18